--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.1",
+    "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
     "@material/textfield": "^3.2.0",
     "node-forge": "^0.9.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-input-mask": "^3.0.0-alpha.0",
     "react-scripts": "3.2.0",
+    "set-value": "^2.0.1",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
