--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-input-mask": "^3.0.0-alpha.0",
     "react-scripts": "3.2.0",
     "set-value": "^2.0.1",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "mixin-deep": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
